# ted_skinner_project

./: .gitignore  FULLINTEL_SALES_RESEARCH_PROMPT (1).md  ITERATION_2_COMPREHENSIVE_REVIEW_REPORT.md  L1-ARCHITECTURE_ Fullintel Rust Agent System.md  README.md  SESSION-HANDOFF-2025-11-22-PHASE7-SESSION3.md  SESSION-HANDOFF-2025-11-24-TESTING-SESSION-01.md  SESSION-HANDOFF-2025-12-01-ARCHIVE-FEATURE.md  TESTING_STATUS_REPORT.md  WORK_RESUMPTION_MANIFEST.md  clippy_fix.sed  clippy_fix_2.sed  fullintel_research_agent_ui_manifest.md  generate_llmclient_tests.cjs  index.html  llmclient_im_codes.txt  package-lock.json  package.json  section4_append.tmp  vite.config.ts
docs/: dev-notes.md
fullintel-agent/: package-lock.json  package.json
manifests/: Deep-Dive-Industry-Protocol.yaml  Inductive-Company-Protocol.yaml  Intellectual-capital-protocol.yaml  fullintel_process_manifest.yaml  value-chain-protocol.yaml  venture-momentum-protocol.yaml
scripts/: battery_test_generator.cjs  battery_test_generator_v2.cjs  generate-icons.mjs  generate_im_coverage_matrix.cjs
src/: App.css  (+3 more)
src-tauri/: Cargo.toml  coverage.md  tauri.conf.json  test_output.txt
src-tauri/backups/: Cargo.toml.bak.2025-11-20T02-34-37  Cargo.toml.bak.2025-11-23T05-26-32  tauri.conf.json.bak.2025-11-23T15-28-18
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent.rs.bak.2025-11-24T01-44-24  auth.rs  lib.rs  lib.rs.bak.2025-11-23T16-59-52  llm.rs  llm.rs.bak.2025-11-26T10-21-39  llm.rs.bak.before-fix  llm.rs.new  main.rs  main.rs.bak.2025-11-23T09-03-10  manifest.rs
src-tauri/tests/: battery1_unit_strategic.rs  battery1_unit_strategic.rs.bak.2025-11-24T09-17-07  battery1_unit_strategic.rs.bak.2025-11-24T09-18-47  battery2_integration_strategic.rs  battery2_integration_strategic.rs.bak.2025-11-24T17-28-59  battery2_integration_strategic.rs.bak.2025-11-25T15-40-28  battery3_system_strategic.rs  battery3_system_strategic.rs.bak.2025-11-25T23-54-05  battery3_system_strategic.rs.bak.2025-11-26T00-01-52  integration_e2e.rs  integration_e2e.rs.bak.2025-11-23T22-17-44  integration_e2e.rs.bak.2025-11-24T02-20-09  unit_agent.rs  unit_agent.rs.bak.2025-11-24T01-33-49
(+108 files in other folders)
