[package]
name = "fullintel-agent"
version = "0.1.1"
description = "Fullintel Sales Intelligence Generator - AI-powered sales research and outreach automation"
authors = ["Ted Skinner"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
thiserror = "1.0"

# Authentication & Security
argon2 = "0.5"              # Password hashing (Argon2id)
aes-gcm = "0.10"            # AES-256-GCM encryption for API keys
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite database
rand = "0.8"                # Cryptographic random number generation
base64 = "0.22"             # Encoding encrypted data

# Date/Time
chrono = "0.4"              # Current date injection for research prompts

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
